add NavBar to header, mark current page on navbar menu have been done

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout>
+<MainLayout title="Home">
   <h1 class="text-4xl font-bold mb-3 p-5">Welcome to Astro</h1>
   <p>
     Astro is a new kind of static site builder that delivers lightning-fast
