--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,8 @@
 ---
+import Hero from "../components/section/hero.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout title="Home">
-  <h1 class="text-4xl font-bold mb-3 p-5">Welcome to Astro</h1>
-  <p>
-    Astro is a new kind of static site builder that delivers lightning-fast
-    performance without sacrificing the developer experience.
-  </p>
+<MainLayout title="Color Kids">
+  <Hero />
 </MainLayout>
