Custom color theme have been added, also custom buttons.

--- a/src/components/section/hero.astro
+++ b/src/components/section/hero.astro
@@ -5,5 +5,8 @@
 <section class="max-w-10/12 mx-auto">
   <div class="flex justify-center items-center p-4 text-[min(10vw,40px)]">
     Hero section
+    <button class="btn-primary">Button</button>
+    <button class="btn-secondary">Button</button>
+    <button class="btn-tertiary">Button</button>
   </div>
 </section>
