--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -22,8 +22,7 @@ import logo from "../../assets/Images/logo-512x512.png";
           class="relative items-center justify-center p-2 focus:outline-0 md:hidden open-mobile-menu"
         >
           <span class="sr-only">Open mobile menu</span>
-
-          <!-- open menu icon -->
+          <!-- Open icon -->
           <svg
             class="block text-gray-700 hover:text-gray-900"
             id="open-icon"
@@ -42,7 +41,8 @@ import logo from "../../assets/Images/logo-512x512.png";
             ></svg
           >
 
-          <!-- close menu icon -->
+          <!-- Close icon -->
+
           <svg
             class="hidden text-gray-700 hover:text-gray-900"
             id="close-icon"
