Footer done, fonst for title:poppins & paragraphs: manrope have been added.

--- a/src/components/section/hero.astro
+++ b/src/components/section/hero.astro
@@ -3,10 +3,12 @@
 ---
 
 <section class="max-w-10/12 mx-auto">
-  <div class="flex justify-center items-center p-4 text-[min(10vw,40px)]">
+  <div
+    class="flex flex-col space-y-5 justify-center items-center p-4 text-[min(10vw,40px)]"
+  >
     Hero section
-    <button class="btn-primary">Button</button>
-    <button class="btn-secondary">Button</button>
-    <button class="btn-tertiary">Button</button>
+    <button class="btn-primary">Primary</button>
+    <button class="btn-secondary">Secondary</button>
+    <button class="btn-tertiary">Tertiary</button>
   </div>
 </section>
