--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import Hero from "../components/section/hero.astro";
 import MainLayout from "../layouts/MainLayout.astro";
+import Hero from "../components/section/hero.astro";
+import Contact from "../components/section/contact.astro";
 ---
 
 <MainLayout title="Color Kids">
   <Hero />
+  <!-- <Contact /> -->
 </MainLayout>
