--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,6 +2,7 @@
 import { ClientRouter } from "astro:transitions";
 import Navbar from "../components/shared/Navbar.astro";
 import "../styles/global.css";
+import Footer from "../components/shared/Footer.astro";
 
 interface Props {
   title: string;
@@ -31,4 +32,6 @@ const { title } = Astro.props;
       <slot />
     </body>
   </main>
+
+  <Footer />
 </html>
