@layer base rules to manage the titles, anchor tags and paragraphs

--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -23,34 +23,16 @@ import logo from "../../assets/Images/logo-512x512.png";
         <span class="flex mb-5 md:mb-0">
           <span class="h-px flex-1 bg-slate-200 md:hidden"></span>
         </span>
-        <h1 class="font-poppins text-2xl mb-3">Menu</h1>
+        <h1 class="mb-3">Menu</h1>
 
         <div
           class="flex flex-col space-y-2.5 items-center text-center md:space-y-2"
         >
-          <a id="link" href="/" class="font-manrope font-medium text-gray-700"
-            >Inicio</a
-          >
-          <a
-            id="link"
-            href="/nosotros"
-            class="font-manrope font-medium text-gray-700">Nosotros</a
-          >
-          <a
-            id="link"
-            href="/servicios"
-            class="font-manrope font-medium text-gray-700">Servicios</a
-          >
-          <a
-            id="link"
-            href="/contacto"
-            class="font-manrope font-medium text-gray-700">Contacto</a
-          >
-          <a
-            id="link"
-            href="/blog"
-            class="font-manrope font-medium text-gray-700">Blog</a
-          >
+          <a id="link" href="/" class="text-gray-700">Inicio</a>
+          <a id="link" href="/nosotros" class="text-gray-700">Nosotros</a>
+          <a id="link" href="/servicios" class="text-gray-700">Servicios</a>
+          <a id="link" href="/contacto" class="text-gray-700">Contacto</a>
+          <a id="link" href="/blog" class="text-gray-700">Blog</a>
         </div>
         <!-- Divider -->
         <span class="flex mt-5">
@@ -60,7 +42,7 @@ import logo from "../../assets/Images/logo-512x512.png";
 
       <!-- Contact -->
       <div class="text-center space-y-2 mb-5">
-        <h1 class="font-poppins text-2xl mb-5">Contacto</h1>
+        <h1 class="mb-5">Contacto</h1>
         <div class="flex justify-center">
           <svg
             class="mr-2"
@@ -73,7 +55,7 @@ import logo from "../../assets/Images/logo-512x512.png";
               d="M12 11.5A2.5 2.5 0 0 1 9.5 9A2.5 2.5 0 0 1 12 6.5A2.5 2.5 0 0 1 14.5 9a2.5 2.5 0 0 1-2.5 2.5M12 2a7 7 0 0 0-7 7c0 5.25 7 13 7 13s7-7.75 7-13a7 7 0 0 0-7-7"
             ></path></svg
           >
-          <p class="font-manrope">Cra. 51 #96-27,Bogotá</p>
+          <p>Cra. 51 #96-27,Bogotá</p>
         </div>
         <div class="flex justify-center">
           <svg
@@ -87,7 +69,7 @@ import logo from "../../assets/Images/logo-512x512.png";
               d="M6.62 10.79c1.44 2.83 3.76 5.15 6.59 6.59l2.2-2.2c.28-.28.67-.36 1.02-.25c1.12.37 2.32.57 3.57.57a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1A17 17 0 0 1 3 4a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.25.2 2.45.57 3.57c.11.35.03.74-.25 1.02z"
             ></path></svg
           >
-          <p class="font-manrope">4003002000</p>
+          <p>4003002000</p>
         </div>
         <div class="flex justify-center">
           <svg
@@ -101,7 +83,7 @@ import logo from "../../assets/Images/logo-512x512.png";
               d="m20 8l-8 5l-8-5V6l8 5l8-5m0-2H4c-1.11 0-2 .89-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2"
             ></path></svg
           >
-          <p class="font-manrope">dianaguerrero@email.com</p>
+          <p>dianaguerrero@email.com</p>
         </div>
         <span class="flex mt-5">
           <span class="h-px flex-1 bg-slate-200 md:hidden"></span>
@@ -109,7 +91,7 @@ import logo from "../../assets/Images/logo-512x512.png";
       </div>
       <!-- Social -->
       <div class="text-center">
-        <h1 class="font-poppins text-2xl mb-5">Síguenos</h1>
+        <h1 class="mb-5">Síguenos</h1>
         <div class="flex justify-around items-center">
           <a href="https://www.instagram.com/dianaguerrero_to/">
             <svg
