--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -68,56 +68,22 @@ import logo from "../../assets/Images/logo-512x512.png";
       <!-- Desktop menu -->
       <div class="hidden md:block">
         <div class="flex space-x-4 items-center">
-          <a id="link" href="/" class="font-manrope font-medium text-gray-700"
-            >Inicio</a
-          >
-          <a
-            id="link"
-            href="/nosotros"
-            class="font-manrope font-medium text-gray-700">Nosotros</a
-          >
-          <a
-            id="link"
-            href="/servicios"
-            class="font-manrope font-medium text-gray-700">Servicios</a
-          >
-          <a
-            id="link"
-            href="/contacto"
-            class="font-manrope font-medium text-gray-700">Contacto</a
-          >
-          <a
-            id="link"
-            href="/blog"
-            class="font-manrope font-medium text-gray-700">Blog</a
-          >
+          <a id="link" href="/" class="text-gray-700">Inicio</a>
+          <a id="link" href="/nosotros" class="text-gray-700">Nosotros</a>
+          <a id="link" href="/servicios" class="text-gray-700">Servicios</a>
+          <a id="link" href="/contacto" class="text-gray-700">Contacto</a>
+          <a id="link" href="/blog" class="text-gray-700">Blog</a>
         </div>
       </div>
     </div>
     <!-- Mobile menu -->
     <div class="mobile-menu md:hidden">
       <div class="flex flex-col items-end pr-7 space-y-4 bg-orangelight">
-        <a id="link" href="/" class="font-manrope font-medium text-gray-700"
-          >Inicio</a
-        >
-        <a
-          id="link"
-          href="/nosotros"
-          class="font-manrope font-medium text-gray-700">Nosotros</a
-        >
-        <a
-          id="link"
-          href="/servicios"
-          class="font-manrope font-medium text-gray-700">Servicios</a
-        >
-        <a
-          id="link"
-          href="/contacto"
-          class="font-manrope font-medium text-gray-700">Contacto</a
-        >
-        <a id="link" href="/blog" class="font-manrope font-medium text-gray-700"
-          >Blog</a
-        >
+        <a id="link" href="/" class="text-gray-700">Inicio</a>
+        <a id="link" href="/nosotros" class="text-gray-700">Nosotros</a>
+        <a id="link" href="/servicios" class="text-gray-700">Servicios</a>
+        <a id="link" href="/contacto" class="text-gray-700">Contacto</a>
+        <a id="link" href="/blog" class="text-gray-700">Blog</a>
       </div>
     </div>
   </nav>
