--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,21 @@
 
 @import "tailwindcss";
 
+@layer base {
+  h1 {
+    font-family: poppins, "sans-serif";
+    font-size: var(--text-2xl);
+  }
+
+  a {
+    font-family: manrope, "sans-serif";
+  }
+
+  p {
+    font-family: manrope, "sans-serif";
+  }
+}
+
 @layer components {
   .btn-primary {
       @apply bg-gradient-to-r from-orangeDark to-orangeMain
