work on sections start

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,5 +6,5 @@ import Contact from "../components/section/contact.astro";
 
 <MainLayout title="Color Kids">
   <Hero />
-  <!-- <Contact /> -->
+  <Contact />
 </MainLayout>
