--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -9,7 +9,9 @@ import logo from "../../assets/Images/logo-512x512.png";
     <div class="block space-y-5 p-5 md:flex md:justify-between md:p-5">
       <!-- Logo-mision -->
       <div class="flex flex-col items-center px-4 md:px-0 md:block">
-        <Image src={logo} alt="logo" class="w-36 h-36" />
+        <a href="/">
+          <Image src={logo} alt="logo" class="w-36 h-36" />
+        </a>
         <p class="text-center md:text-start">Centro de Estimulación Infantil</p>
         <!-- Divider -->
         <span class="flex">
