--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -5,9 +5,9 @@ import logo from "../../assets/Images/logo-512x512.png";
 ---
 
 <header
-  class="sticky top-0 inset-x-0 flex flex-wrap md:flex-nonwrap z-50 w-full"
+  class="sticky top-0 inset-x-0 flex flex-wrap md:flex-nonwrap z-50 w-full backdrop-blur-3xl"
 >
-  <nav class="w-full mx-auto md:w-10/12 backdrop-blur-lg">
+  <nav class="w-full mx-auto md:w-10/12">
     <div class="flex justify-between items-center p-5">
       <!-- Logo -->
       <div>
@@ -68,22 +68,22 @@ import logo from "../../assets/Images/logo-512x512.png";
       <!-- Desktop menu -->
       <div class="hidden md:block">
         <div class="flex space-x-4 items-center">
-          <a id="link" href="/" class="text-gray-700">Inicio</a>
-          <a id="link" href="/nosotros" class="text-gray-700">Nosotros</a>
-          <a id="link" href="/servicios" class="text-gray-700">Servicios</a>
-          <a id="link" href="/contacto" class="text-gray-700">Contacto</a>
-          <a id="link" href="/blog" class="text-gray-700">Blog</a>
+          <a id="link" href="/" class="text-gray-900">Inicio</a>
+          <a id="link" href="/nosotros" class="text-gray-900">Nosotros</a>
+          <a id="link" href="/servicios" class="text-gray-900">Servicios</a>
+          <a id="link" href="/contacto" class="text-gray-900">Contacto</a>
+          <a id="link" href="/blog" class="text-gray-900">Blog</a>
         </div>
       </div>
     </div>
     <!-- Mobile menu -->
     <div class="mobile-menu md:hidden">
       <div class="flex flex-col items-end pr-7 space-y-4 bg-orangelight">
-        <a id="link" href="/" class="text-gray-700">Inicio</a>
-        <a id="link" href="/nosotros" class="text-gray-700">Nosotros</a>
-        <a id="link" href="/servicios" class="text-gray-700">Servicios</a>
-        <a id="link" href="/contacto" class="text-gray-700">Contacto</a>
-        <a id="link" href="/blog" class="text-gray-700">Blog</a>
+        <a id="link" href="/" class="text-gray-900">Inicio</a>
+        <a id="link" href="/nosotros" class="text-gray-900">Nosotros</a>
+        <a id="link" href="/servicios" class="text-gray-900">Servicios</a>
+        <a id="link" href="/contacto" class="text-gray-900">Contacto</a>
+        <a id="link" href="/blog" class="text-gray-900">Blog</a>
       </div>
     </div>
   </nav>
@@ -115,9 +115,9 @@ import logo from "../../assets/Images/logo-512x512.png";
     const links = document.querySelectorAll("#link");
     links.forEach((link) => {
       if (link.getAttribute("href") === currentPath) {
-        link.classList.add("text-orange-500");
+        link.classList.add("text-orangeMain");
       } else {
-        link.classList.remove("text-orange-500");
+        link.classList.remove("text-orangeMain");
       }
     });
 
