--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,12 @@
   p {
     font-family: manrope, "sans-serif";
   }
+  
+  h2 {
+    font-family: manrope, "sans-serif";
+    font-size: var(--text-lg);
+    font-weight: var(--font-medium);
+  }
 }
 
 @layer components {
@@ -33,7 +39,7 @@
          hover:outline-1
        hover:outline-slate-400
          px-4 py-2 rounded-xl
-       text-slate-100 font-semibold text-lg
+       text-slate-100 font-semibold
          shadow-md transition duration-400 ease-in-out
          transform hover:scale-105
   }
@@ -45,7 +51,7 @@
         hover:outline-1
       hover:outline-slate-400
         px-4 py-2 rounded-xl
-      text-slate-100 font-semibold text-lg
+      text-slate-100 font-semibold
         shadow-md transition duration-400 ease-in-out
         transform hover:scale-105
   }
@@ -72,10 +78,10 @@
   --color-orangeMain: oklch(77.8% 0.159 74.2);
   --color-orangeDark: oklch(60.46% 0.1225 74.62);
 
-  --color-yelowLight: oklch(98.37% 0.0267 95.33);
-  --color-yelowLighter: oklch(98.96% 0.0186 96.86);
-  --color-yelowMain: oklch(67.7% 0.026 259.8);
-  --color-yelowDark: oklch(73.04% 0.1217 95.69);
+  --color-yellowLighter: oklch(98.96% 0.0186 96.86);
+  --color-yellowLight: oklch(96.77% 0.0541 95.87);
+  --color-yellowMain: oklch(90.45% 0.1526 95.16);
+  --color-yellowDark: oklch(73.04% 0.1217 95.69);
 
   --color-fuchsiaLighter: oklch(96.13% 0.025 341.82);
   --color-fuchsiaLight: oklch(94.13% 0.0386 341.8);
