--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Hero from "../components/section/hero.astro";
 import Contact from "../components/section/contact.astro";
+import BlogPosts from "../components/section/bloPosts.astro";
 ---
 
 <MainLayout title="Color Kids">
   <Hero />
+  <BlogPosts />
   <!-- <Contact /> -->
 </MainLayout>
