--- a/src/components/section/HeroSection.astro
+++ b/src/components/section/HeroSection.astro
@@ -51,18 +51,8 @@ import heroImg from "../../assets/Images/hero-img.jpg";
             animi sit tempore incidunt?
           </h2>
           <div class="mt-10 flex flex-col sm:flex-row gap-4">
-            <a
-              href="/nosotros"
-              class="px-8 py-3 bg-gradient-to-r from-sky-600 to-sky-400 text-slate-100 font-medium rounded-lg hover:from-sky-400 hover:to-sky-600 transition duration-400 text-center shadow-lg shadow-blue-500/20"
-            >
-              Conoce mas
-            </a>
-            <a
-              href="/contacto"
-              class="px-8 py-3 bg-gradient-to-r from-sky-600 to-sky-400 text-slate-100 font-medium rounded-lg hover:from-sky-400 hover:to-sky-600 transition duration-400 text-center shadow-lg shadow-blue-500/20"
-            >
-              Contactanos
-            </a>
+            <a href="/nosotros" class="btn-primary"> Conoce mas </a>
+            <a href="/contacto" class="btn-primary"> Contactanos </a>
           </div>
         </div>
 
