--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
-import Hero from "../components/section/hero.astro";
 import Contact from "../components/section/contact.astro";
-import BlogPosts from "../components/section/bloPosts.astro";
+import BlogPostsSection from "@/components/section/BlogPostsSection.astro";
+import HeroSection from "@/components/section/HeroSection.astro";
+import MainLayout from "@/layouts/MainLayout.astro";
 ---
 
 <MainLayout title="Color Kids">
-  <Hero />
-  <BlogPosts />
+  <HeroSection />
+  <BlogPostsSection />
   <!-- <Contact /> -->
 </MainLayout>
