--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,8 +1,6 @@
 ---
 import { ClientRouter } from "astro:transitions";
-import Navbar from "../components/shared/Navbar.astro";
 import "../styles/global.css";
-import Footer from "../components/shared/Footer.astro";
 
 interface Props {
   title: string;
@@ -25,13 +23,12 @@ const { title } = Astro.props;
     <ClientRouter />
   </head>
 
-  <Navbar />
-
-  <body>
-    <main>
+  <body class="w-full mx-auto min-h-screen p-5 md:p-10">
+    <a href="/blog">
+      <button class="btn-primary"> Regresar al blog </button>
+    </a>
+    <main class="">
       <slot />
     </main>
   </body>
-
-  <Footer />
 </html>
